Prepare for publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Update requirements
         if: steps.version.outputs.publish == 'true'
         run: |
-          PYTHONTK_VER=$(pip index versions pythontk 2>/dev/null | grep -oP 'Available versions: \K[^,]+' || echo "0.7.36")
+          PYTHONTK_VER=$(curl -s https://raw.githubusercontent.com/m3trik/pythontk/main/pythontk/__init__.py | grep -oP '__version__\s*=\s*["\x27]\K[^"\x27]+')
           sed -i "s/pythontk==.*/pythontk==$PYTHONTK_VER/" requirements.txt
       
       - name: Build
