--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,11 @@ jobs:
         run: |
           PYTHONTK_VER=$(pip index versions pythontk 2>/dev/null | grep -oP 'Available versions: \K[^,]+' || echo "0.7.36")
           sed -i "s/pythontk==.*/pythontk==$PYTHONTK_VER/" requirements.txt
+          
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add requirements.txt
+          git diff --staged --quiet || git commit -m "Update requirements.txt [skip ci]"
       
       - name: Build
         if: steps.version.outputs.publish == 'true'
