--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,11 +46,6 @@ jobs:
         run: |
           PYTHONTK_VER=$(pip index versions pythontk 2>/dev/null | grep -oP 'Available versions: \K[^,]+' || echo "0.7.36")
           sed -i "s/pythontk==.*/pythontk==$PYTHONTK_VER/" requirements.txt
-          
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add requirements.txt
-          git diff --staged --quiet || git commit -m "Update requirements.txt [skip ci]"
       
       - name: Build
         if: steps.version.outputs.publish == 'true'
@@ -71,6 +66,12 @@ jobs:
             -H "Authorization: token ${{ secrets.REPO_DISPATCH_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type":"bump_dev","client_payload":{"package":"uitk"}}'
+          
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.REPO_DISPATCH_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{"event_type":"update_deps","client_payload":{"package":"uitk"}}'
       
       - name: Summary
         run: |
