--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,6 +73,17 @@ jobs:
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type":"update_deps","client_payload":{"package":"uitk"}}'
       
+      - name: Trigger downstream dependency updates
+        if: steps.version.outputs.publish == 'true'
+        run: |
+          for repo in mayatk tentacle; do
+            curl -X POST \
+              -H "Accept: application/vnd.github.v3+json" \
+              -H "Authorization: token ${{ secrets.REPO_DISPATCH_TOKEN }}" \
+              https://api.github.com/repos/m3trik/$repo/dispatches \
+              -d '{"event_type":"update_deps","client_payload":{"dependency":"uitk"}}'
+          done
+      
       - name: Summary
         run: |
           if [ "${{ steps.version.outputs.publish }}" == "true" ]; then
