--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
-recursive-include uitk *.ui *.svg *.qss *.md
+include LICENSE
+include README.md
+include pyproject.toml
+recursive-include uitk *.ui *.svg *.qss *.md *.json
